@@ -1,3 +1,7 @@
+2017-07-15  Per Bothner  <per@bothner.com>
+
+	* standard/IfFeature.java (isProvide): Check for null name.
+
 2017-06-08  Per Bothner  <per@bothner.com>
 
 	* lang/Macro.java: Update for new position-range model.
